make open-close modal

--- a/memory-main/index.html
+++ b/memory-main/index.html
@@ -140,7 +140,7 @@
             <h2 class="modal__title">You did it!</h2>
             <p class="modal__subtitle">Game over! Here's how you go on...</p>
             <div class="modal__item-wrap">
-              <p class="modal_description">Time Elapsed</p>
+              <p class="modal__description">Time Elapsed</p>
               <p class="modal__number">1:53</p>
             </div>
             <div class="modal__item-wrap">
